@@ -1,3 +1,6 @@
+2 November 2004 Sylvain Pion
+- Static filters : yet another smallish de-optimisticization.
+
 29 October 2004 Sylvain Pion
 - Static filters : the epsilons were a bit too optimistic for the
   homogeneization formal proof.
